Switch flex scrollers to allow infinite endward overflow, plus startward overflow limited to in-flow alignment https://bugs.webkit.org/show_bug.cgi?id=275209 rdar://problem/129343181

Reviewed by Sammy Gill.

Switches allowedLayoutOverflow to allow infinite overflow in the end direction
(per writing mode), and to allow limited overflow based on in-flow alignment.
This matches Flexbox to the logic used in Grid and Block layout.

* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-col-reverse-overflow-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-col-reverse-overflow-001.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-col-reverse-overflow-002-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-col-reverse-overflow-002.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-col-wrap-overflow-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-col-wrap-overflow-001.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-col-wrap-overflow-002-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-col-wrap-overflow-002.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-row-reverse-overflow-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-row-reverse-overflow-001.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-row-reverse-overflow-002-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-row-reverse-overflow-002.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-row-wrap-overflow-001-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-row-wrap-overflow-001.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-row-wrap-overflow-002-expected.html: Added.
* LayoutTests/imported/w3c/web-platform-tests/css/css-overflow/overflow-alignment-flex-row-wrap-overflow-002.html: Added.
* Source/WebCore/rendering/RenderFlexibleBox.cpp:
(WebCore::resolveLeftRightAlignment): Add convenience method.
(WebCore::initialJustifyContentOffset): Use convenience method.
(WebCore::contentAlignmentStartOverflow): Add convenience method.
(WebCore::RenderFlexibleBox::layoutAndPlaceChildren): Stash alignment overflow.
(WebCore::RenderFlexibleBox::alignFlexLines): Stash alignment overflow.
(WebCore::RenderFlexibleBox::allowedLayoutOverflow const): Use alignment overflow for limits.
* Source/WebCore/rendering/RenderFlexibleBox.h: Add storage for alignment overflow.

Canonical link: https://commits.webkit.org/279992@main